--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "vite-vue-starter",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://HocokBcapae.github.io/test-mems",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.13",
@@ -14,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "gh-pages": "^6.3.0",
     "vite": "^6.3.2"
   }
 }
