--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "gh-pages": "^6.3.0",
-    "vite": "^6.3.2"
+    "vite": "^6.3.2",
+    "vite-plugin-gh-pages": "^1.0.1"
   }
 }
